Updating overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,13 @@ This is the CSS control for Let Us Help You
   align-items: center;
   }
 
+.workwithus .col-12 {
+  padding-right: 0;
+    padding-left: 0;
+}
+
+
+
 
 /* 
 ============================================================================================
